--- a/viz/static/css/main.css
+++ b/viz/static/css/main.css
@@ -39,7 +39,7 @@ footer, header, hgroup, menu, nav, section {
     display: block;
 }
 body {
-    line-height: 1;
+    line-height: 1.25;
 }
 ol, ul {
     list-style: none;
@@ -62,12 +62,6 @@ table {
     margin:0 auto;
 }
 
-#nav {
-    padding:10px;
-    width: 350px;
-    float: left;
-}
-
 h1 {
     font-size: 1.75em;
     font-weight:bold;
@@ -84,15 +78,63 @@ h3 {
     padding: 5px;
 }
 
+legend {
+    font-size: 1.5em;
+    font-weight:bold;
+    padding: 5px;
+}
+
 #main {
-    float:right;
-    background:#9c9;
+    width: 100%;
 }
 
 #nav {display: none;}
-#instructions {display: none;}
-#nav_buttons {display: none;}
-#statistics {display: none;}
+#instructions {
+    display: none;
+    position: absolute;
+    top: 110px;
+    left: 10px;
+    background-color: white;
+    padding: 10px;
+    width: 25%;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+}
+#satellite_form {
+    display: none;
+    position: absolute;
+    top: 110px;
+    left: 10px;
+    background-color: white;
+    padding: 10px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+}
+#map_display {
+    display: none;
+    position: absolute;
+    top: 110px;
+    left: 10px;
+    background-color: white;
+    padding: 10px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+}
+#satellite_display {
+    display: none;
+    position: absolute;
+    top: 50px;
+    right: 10px;
+    background-color: white;
+    padding: 10px;
+    width: 25%;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+}
 
 /* Buttons */
 #reset_button {
@@ -101,7 +143,7 @@ h3 {
     left: 10px;
 }
 
-#instruction_button {
+#instructions_button {
     position: absolute;
     top: 50px;
     left: 70px;
@@ -113,84 +155,13 @@ h3 {
     left: 130px;
 }
 
-#three_d_display_button {
-    position: absolute;
-    top: 110px;
-    left: 130px;
-    display: none;
-}
-
-#columbus_display_button {
-    position: absolute;
-    top: 170px;
-    left: 130px;
-    display: none;
-}
-
-#two_d_display_button {
-    position: absolute;
-    top: 230px;
-    left: 130px;
-    display: none;
-}
-
 #satellite_button {
     position: absolute;
     top: 50px;
     left: 190px;
 }
 
-#live_data_button {
-    position: absolute;
-    top: 50px;
-    left: 250px;
+.button {
+    margin-top: 15px;
+    float: right;
 }
-
-#bing_data_button {
-    position: absolute;
-    top: 110px;
-    left: 250px;
-    display: none;
-}
-
-#osm_data_button {
-    position: absolute;
-    top: 170px;
-    left: 250px;
-    display: none;
-}
-
-#static_data_button {
-    position: absolute;
-    top: 230px;
-    left: 250px;
-    display: none;
-}
-
-table {border-collapse:collapse;}
-table td, table th {border:1px solid #888; padding: 3px;}
-table td {text-align: right;}
-
-/*
- * SimpleModal Basic Modal Dialog
- * http://www.ericmmartin.com/projects/simplemodal/
- * http://code.google.com/p/simplemodal/
- *
- * Copyright (c) 2010 Eric Martin - http://ericmmartin.com
- *
- * Licensed under the MIT license:
- *   http://www.opensource.org/licenses/mit-license.php
- *
- * Revision: $Id: basic.css 257 2010-07-27 23:06:56Z emartin24 $
- */
-
-/* Overlay */
-#simplemodal-overlay {background-color:#000; cursor:wait;}
-
-/* Container */
-#simplemodal-container {height:350px; width:800px; color:#bbb; background-color:#333; border:4px solid #444; padding:12px;}
-#simplemodal-container .simplemodal-data {padding:8px;}
-#simplemodal-container code {background:#141414; border-left:3px solid #65B43D; color:#bbb; display:block; font-size:12px; margin-bottom:12px; padding:4px 6px 6px;}
-#simplemodal-container a {color:#ddd;}
-#simplemodal-container a.modalCloseImg {background:url(../images/x.png) no-repeat; width:25px; height:29px; display:inline; z-index:3200; position:absolute; top:-15px; right:-16px; cursor:pointer;}
-#simplemodal-container h3 {color:#84b8d9;}
