FullScreen works on FireFox, Safari, Chrome
But we lose the UI controls and clock due to styling.

--- a/viz/static/css/main.css
+++ b/viz/static/css/main.css
@@ -177,6 +177,12 @@ legend {
     left: 190px;
 }
 
+#fullscreen_button {
+    position: absolute;
+    top: 50px;
+    left: 250px;
+}
+
 .button {
     margin-top: 15px;
     float: right;
