--- a/viz/static/css/main.css
+++ b/viz/static/css/main.css
@@ -161,47 +161,38 @@ legend {
     display: inline-block;
 }
 
-#zoom_out {
-    width: 182px;
-    height: 40px;
-    display: inline-block;
-}
-
-#zoom_in {
-    width: 182px;
-    height: 40px;
-    display: inline-block;
-    margin-left: -5px;
-}
-
 #play_button {
     width: 59px;
     height: 38px;
     display: inline-block;
+    margin-right: 5px;
+    margin-bottom: 5px;
 }
 
 #pause_button {
     width: 59px;
     height: 38px;
     display: inline-block;
+    margin-right: 5px;
+    margin-bottom: 5px;
 }
 
 #instructions {
     display: none;
-    top: 180px;
+    top: 195px;
     left: 10px;
     width: 25%;
 }
 
 #satellite_form {
     display: none;
-    top: 180px;
+    top: 195px;
     left: 10px;
 }
 
 #map_display {
     display: none;
-    top: 180px;
+    top: 195px;
     left: 10px;
 }
 
@@ -213,7 +204,6 @@ legend {
 }
 
 #satellite_display dl {
-    border: 3px double #ccc;
     padding: 0.5em;
 }
 
@@ -221,8 +211,6 @@ legend {
     float: left;
     clear: left;
     width: 100px;
-    text-align: right;
-    font-weight: bold;
     color: white;
 }
 
@@ -264,7 +252,7 @@ legend {
 /* Buttons */
 #navigation_buttons {
     position: absolute;
-    top: 80px;
+    top: 90px;
     left: 10px;
     z-index: 10;
 }
@@ -283,6 +271,7 @@ legend {
 .hud_button {
     height: 70px;
     width: 70px;
+    display: inline-block;
 }
 
 .second_level {
@@ -304,4 +293,8 @@ legend {
 .perspective_button {
     padding-top: 5px;
     padding-right: 10px;
+}
+
+.float-right {
+    float: right;
 }
