--- a/isat/css/main.scss
+++ b/isat/css/main.scss
@@ -14,6 +14,7 @@ body {
 
 #wrapper {
     padding: 0 15px 1px 15px;
+    background: url(../../img/content_bg.png) repeat-y;
 }
 
 #iSat_header {
@@ -229,6 +230,7 @@ legend {
 
 #isat_text_only {
     padding-left: 15px;
+    background: url(../../img/content_bg.png) repeat-y;
 }
 
 .close_button {
