--- a/isat/css/main.scss
+++ b/isat/css/main.scss
@@ -14,6 +14,9 @@ body {
 
 #wrapper {
     padding: 0 15px 1px 15px;
+}
+
+#backgroundShadow {
     background: url(../../img/content_bg.png) repeat-y;
 }
 
@@ -85,32 +88,32 @@ legend {
 }
 
 #reset_button {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     display: inline-block;
 }
 
 #instructions_button {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     display: inline-block;
 }
 
 #display_button {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     display: inline-block;
 }
 
 #satellite_button {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     display: inline-block;
 }
 
 #fullscreen_button {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     display: inline-block;
 }
 
@@ -208,10 +211,10 @@ legend {
 /* Buttons */
 #navigation_buttons {
     position: absolute;
-    top: 80px;
+    top: 70px;
     left: 5px;
     z-index: 10;
-    width: 400px;
+    width: 300px;
     text-align: center;
 }
 
@@ -220,12 +223,23 @@ legend {
     top: 10px;
     left: 5px;
     z-index: 10;
-    width: 400px;
+    width: 300px;
     text-align: center;
+}
+
+#zoom_out {
+    width: 150px;
 }
 
 #zoom_in {
     margin-left: -5px;
+    width: 150px;
+}
+
+#cesiumLogo {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
 }
 
 #isat_text_only {
